--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@windmill/react-ui": "^0.6.0",
-    "next": "14.2.2",
+    "next": "^14.2.2",
     "react": "^18",
     "react-dom": "^18"
   },
