--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@windmill/react-ui": "^0.6.0",
+    "framer-motion": "^11.1.7",
     "motion": "^10.17.0",
     "next": "^14.2.2",
     "react": "^18",
